--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="page back">
   <div class="center-text">
     <h1>Welcome to International Yoga Day</h1>
-    <p><strong>Dear Guest,</strong></p>
+    <p><strong>Dear Dr. Sobhana Nair Madam</strong></p>
     <p>We are truly honored by your presence as we come together to celebrate the harmony of body, mind, and spirit.</p>
     <p>May this day inspire inner peace, strength, and well-being for all.</p>
     <p>Thank you for joining us on this journey of health and mindfulness.</p>
